--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,9 +6,15 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script type="text/javascript" src="{{ url_for('static', filename='tokenise.js') }}" ></script>
+		<script type="text/javascript" src="{{ url_for('static', filename='topics.js') }}" ></script>
 		<title>Your News</title>
 	</head>
 	<body>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top above">
+		  <div class="container">
+		    <a class="navbar-brand" href="/">Topic Builder</a>
+		 	</div>
+		</nav>
 	{% block content %}{% endblock %}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
